--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,7 @@
     "body-parser": "~1.0.1",
     "express": "~4.0.0",
     "mongoose": "~3.6.13",
-    "morgan": "~1.0.0",
+    "morgan": "~1.0.0"
   },
   "keywords": [
     "carlpapa"
