--- a/client/bower.json
+++ b/client/bower.json
@@ -9,7 +9,9 @@
     "angular-resource": "^1.3.0",
     "angular-sanitize": "^1.3.0",
     "angular-touch": "^1.3.0",
-    "angular-ui-router": "~0.2.15"
+    "angular-ui-router": "~0.2.15",
+    "materialize": "~0.97.0",
+    "jquery": "~2.1.4"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
