--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "body-parser": "~1.0.1",
     "express": "~4.0.0",
+    "jsonwebtoken": "^5.0.4",
     "mongoose": "~3.6.13",
     "morgan": "~1.0.0"
   },
