updated express router. Auth is broken

--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,9 @@
 {
   "name": "carlpapa",
   "version": "0.0.0",
-  "dependencies": {},
+  "dependencies": {
+    "satellizer": "^0.11.3"
+  },
   "repository": {},
   "devDependencies": {
     "grunt": "^0.4.5",
