--- a/client/bower.json
+++ b/client/bower.json
@@ -11,8 +11,8 @@
     "angular-touch": "^1.3.0",
     "angular-ui-router": "~0.2.15",
     "materialize": "~0.97.0",
-    "jquery": "~2.1.4"
-
+    "jquery": "~2.1.4",
+    "satellizer": "~0.11.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
