--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "main": "server.js",
   "dependencies": {
     "body-parser": "~1.0.1",
+    "cors": "^2.7.1",
     "express": "~4.0.0",
     "jsonwebtoken": "^5.0.4",
     "mongoose": "~3.6.13",
