--- a/client/bower.json
+++ b/client/bower.json
@@ -12,15 +12,11 @@
     "angular-ui-router": "~0.2.15",
     "materialize": "~0.97.0",
     "jquery": "~2.1.4",
-    "angular-jwt": "~0.0.9",
-    "angular-storage": "~0.5.0"
+    "satellizer": "~0.11.3"
   },
   "devDependencies": {
     "angular-mocks": "^1.3.0"
   },
   "appPath": "app",
-  "moduleName": "carlpapaApp",
-  "resolutions": {
-    "angular": "1.4.3"
-  }
+  "moduleName": "carlpapaApp"
 }
